<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/page_background"
    tools:context=".LogInPage">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:background="@drawable/edit_text_bg"
        app:cardCornerRadius="20dp"
        app:cardElevation="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/light_pink"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mailid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/mail_logo"
                android:drawablePadding="8dp"
                android:hint="@string/mail_id_ask"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/hint_color"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/password_logo"
                android:drawablePadding="8dp"
                android:hint="@string/password_ask"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="@color/hint_color"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/teal"

                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/ask_forgot_pass"
            android:textAlignment="center"
            android:textColor="#1565C0"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signup_ask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/ask_not_have_acc"
                android:textAlignment="center"
                android:textColor="#1565C0"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_frame"
                android:layout_marginBottom="20dp"
                android:minHeight="48dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/teal"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>